<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_gradient"
    tools:context=".activity.ChooseLanguageActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/open_sans_condensed_bold"
        android:text="@string/choose_language"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <Button
            android:id="@+id/id_eng"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_click_default_lang"
            android:fontFamily="@font/open_sans_condensed_bold"
            android:text="@string/english_language"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <Button
            android:id="@+id/id_tamil"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/id_eng"
            android:layout_marginTop="12dp"
            android:background="@drawable/button_click_default_lang"
            android:fontFamily="@font/open_sans_condensed_bold"
            android:text="@string/tamil_language"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <Button
            android:id="@+id/id_hi"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/id_tamil"
            android:layout_marginTop="12dp"
            android:background="@drawable/button_click_default_lang"
            android:fontFamily="@font/open_sans_condensed_bold"
            android:text="@string/hindi_language"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textStyle="bold" />

    </RelativeLayout>

</RelativeLayout>