<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.NoInternetActivity">

    <RelativeLayout
        android:id="@+id/top_nav_main"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="false">


        <ImageView
            android:id="@+id/backArrow"
            android:layout_width="35dp"
            android:layout_height="30dp"
            android:layout_centerInParent="false"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            app:srcCompat="@drawable/ic_baseline_arrow_back_block_40"
            app:tint="@color/black" />

        <TextView
            android:id="@+id/id_smartphone_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_toRightOf="@id/backArrow"
            android:text=""
            android:textColor="@color/white"
            android:textSize="19dp"
            android:fontFamily="@font/open_sans_light"/>


    </RelativeLayout>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/internet_no_connection"
                    app:tint="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_internet_connection"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/open_sans_light"/>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="4dp">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_1_check_mobile_data_connection"
                        android:textColor="@color/grey"
                        android:layout_marginTop="2dp"
                        android:fontFamily="@font/open_sans_light"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_2_check_wifi_connection"
                        android:textColor="@color/grey"
                        android:layout_marginTop="2dp"
                        android:fontFamily="@font/open_sans_light"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_3_please_turn_on_mobile_data"
                        android:textColor="@color/grey"
                        android:layout_marginTop="2dp"
                        android:fontFamily="@font/open_sans_light"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_4_restart_the_skyblue_shopping_app"
                        android:textColor="@color/grey"
                        android:layout_marginTop="2dp"
                        android:fontFamily="@font/open_sans_light"/>

                </LinearLayout>
            </RelativeLayout>


        </LinearLayout>


    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/save_card_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="10dp"
        app:cardCornerRadius="30dp">

        <Button
            android:id="@+id/no_internet_refresh_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorTopMenu"
            android:text="@string/refresh"
            android:textColor="@color/colorPrimaryBlue"
            android:fontFamily="@font/open_sans_light"/>
    </androidx.cardview.widget.CardView>

</RelativeLayout>