<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountActivity">

    <RelativeLayout
        android:id="@+id/top_nav_main"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="false"
        android:background="@color/colorPrimaryBlue">


        <ImageView
            android:id="@+id/id_back"
            android:layout_width="35dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            app:srcCompat="@drawable/ic_baseline_arrow_back_white_40"
            app:tint="@color/white" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/id_back"
            android:text="@string/account"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:fontFamily="@font/open_sans_light"/>


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/top_nav_main">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                app:cardBackgroundColor="@color/white">
                <Button
                    android:id="@+id/id_profile_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/profile"
                    android:background="@drawable/button_click_default"
                    android:clickable="true"
                    android:focusable="true"
                    android:textAlignment="textStart"
                    android:paddingLeft="10dp"
                    android:fontFamily="@font/open_sans_light"
                   />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                app:cardBackgroundColor="@color/white">
                <Button
                    android:id="@+id/id_delivery_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/delivery_address"
                    android:background="@drawable/button_click_default"
                    android:clickable="true"
                    android:focusable="true"
                    android:textAlignment="textStart"
                    android:paddingLeft="10dp"
                    android:fontFamily="@font/open_sans_light"
                    />

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                app:cardBackgroundColor="@color/white">
                <Button
                    android:id="@+id/id_account_order_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/order_list"
                    android:background="@drawable/button_click_default"
                    android:clickable="true"
                    android:focusable="true"
                    android:textAlignment="textStart"
                    android:paddingLeft="10dp"
                    android:fontFamily="@font/open_sans_light"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                app:cardBackgroundColor="@color/white">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/order_canceled_list"
                    android:background="@drawable/button_click_default"
                    android:clickable="true"
                    android:focusable="true"
                    android:textAlignment="textStart"
                    android:paddingLeft="10dp"
                    android:fontFamily="@font/open_sans_light"/>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                app:cardBackgroundColor="@color/white">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/search_history"
                    android:background="@drawable/button_click_default"
                    android:clickable="true"
                    android:focusable="true"
                    android:textAlignment="textStart"
                    android:paddingLeft="10dp"
                    android:fontFamily="@font/open_sans_light"/>

            </androidx.cardview.widget.CardView>


        </LinearLayout>

    </RelativeLayout>


</RelativeLayout>